--- a/assets/style.css
+++ b/assets/style.css
@@ -119,11 +119,16 @@ nav{
   .links{
     width: 50%;
   }
+  body{
+    overflow-x: hidden;
+    height: 225vh;
+  }
 }
 
 @media screen and (max-width:768px){
   body{
     overflow-x: hidden;
+    height: 250vh;
   }
   .links{
     position: absolute;
@@ -176,7 +181,7 @@ nav{
 .aboutMe{
   background: white;
   min-height: 20vh;
-  width: 90%;
+  width: 93%;
   background: linear-gradient(to right bottom, rgba(255,255,255,0.1), rgba(255,255,255,0.03));
   border-radius: 0.5rem;
   margin-left: 50px;
@@ -195,9 +200,8 @@ nav{
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 10px;
 }
-
-
 
 /* Contact link properties */
 
@@ -209,11 +213,21 @@ nav{
 .contactLinks li{
   list-style: none;
   font-size: 18px;
+  padding: 10px;
+  background: white;
+  min-height: 22px;
+  width: 250px;
+  background: linear-gradient(to right bottom, rgba(255,255,255,0.1), rgba(255,255,255,0.03));
+  border-radius: 0.5rem;
 }
 
 .contactLinks a{
   text-decoration: none;
   color: rgb(253, 253, 231);
+}
+
+.contactLinks a:hover{
+  font-weight: bold;
 }
 
 @media screen and (max-width:768px){
@@ -223,3 +237,94 @@ nav{
     align-items: center;
   }
 }
+
+/* Work section properties */
+.container{
+  background: white;
+  min-height: 20vh;
+  width: 93%;
+  background: linear-gradient(to right bottom, rgba(255,255,255,0.1), rgba(255,255,255,0.03));
+  border-radius: 0.5rem;
+  margin-left: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  /* align-content: space-around; */
+}
+
+.fouricons{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.container1,
+.container2{
+  display: flex;
+}
+
+.text{
+  color: black;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
+.overlay1{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: rgb(253, 253, 231);
+}
+
+.Project1,
+.Project2,
+.Project3,
+.Project4,
+.Project5{
+  position: relative;
+}
+
+.Project1:hover .overlay1{
+  opacity: .75;
+}
+
+.Project2:hover .overlay1{
+  opacity: .75;
+}
+
+.Project3:hover .overlay1{
+  opacity: .75;
+}
+
+.Project4:hover .overlay1{
+  opacity: .75;
+}
+
+.Project5:hover .overlay1{
+  opacity: .75;
+}
+
+#work img{
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+/* #work img:hover{
+  opacity: 0.3;
+} */
