updated readme file, added new placeholder images, and updated links in the webpage

--- a/assets/style.css
+++ b/assets/style.css
@@ -64,9 +64,9 @@ h2{
   margin-bottom: 20px;
 }
 
-.background{
+/* .background{
   width: fit-content;
-}
+} */
 
 /* Navigation bar properties */
 nav{
